added theme toggle, sidenav function, added products list & search form template

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -86,7 +86,7 @@
   }
 
   .input-field-lg {
-    @apply input-field px-4 py-3 dark:bg-primary-dark;
+    @apply input-field px-4 py-3 dark:bg-body-dark;
   }
 
   .input-label {
@@ -102,7 +102,7 @@
   }
 
   .nav-link {
-    @apply text-secondary-dark dark:text-light font-normal text-base md:text-sm dark:hover:bg-slate-700 hover:bg-slate-300 hover:shadow-sm px-3 py-2 rounded-md w-full cursor-pointer transition capitalize;
+    @apply text-secondary-dark dark:text-light font-normal text-base md:text-sm dark:hover:bg-slate-800 hover:bg-slate-200 hover:shadow-sm px-3 py-2 rounded-md w-full cursor-pointer transition capitalize;
   }
 
   .nav-link__active {
