--- a/templates/core/about.html
+++ b/templates/core/about.html
@@ -34,7 +34,7 @@
 
             <a
               href="https://github.com/sam4web/shopswift-django"
-              class="text-primary font-medium"
+              class="text-primary font-medium hover:underline"
               target="_blank"
             >
               source code
