--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -2,9 +2,7 @@
   <div class="py-6 px-5 text-center">
     <p class="text-light">
       &copy;
-      <script>
-        document.write(new Date().getFullYear());
-      </script>
+      <span x-text="new Date().getFullYear()"></span>
       <span class="text-primary font-medium">ShopSwift</span>. All rights
       reserved.
     </p>
