--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<header class="dark:bg-body-dark transition">
+<header class="dark:bg-body-dark transition" x-data="{showSidenav: false}">
   <nav class="bg-secondary-dark dark:bg-gray-dark transition">
     <div class="max-w-7xl w-full mx-auto px-4 lg:px-10 py-1.5">
       <ul class="text-light text-sm md:text-[16px] font-light">
@@ -9,7 +9,9 @@
             <a href="{% url 'core:login' %}" class="hover:underline">Sign in</a>
           </li>
           <li>
-            <a href="{% url 'core:register' %}" class="hover:underline">Create Account</a>
+            <a href="{% url 'core:register' %}" class="hover:underline">
+              Create Account
+            </a>
           </li>
         </div>
       </ul>
@@ -22,28 +24,44 @@
       <div class="flex justify-between items-center">
         <h3 class="md:block hidden">
           <a href="{% url 'core:index' %}">
-            <img src="{% static 'images/logo.png' %}" alt="shopswift logo" class="size-12 rounded-md shadow-md" />
+            <img
+              src="{% static 'images/logo.png' %}"
+              alt="shopswift logo"
+              class="size-12 rounded-md shadow-md"
+            />
           </a>
         </h3>
         {% with request.resolver_match.url_name as url_name %}
-        <ul class="hidden md:flex items-center space-x-0.5">
+        <ul class="hidden md:flex items-center space-x-1">
           <li>
-            <a class="nav-link {% if url_name == 'index' %}nav-link__active{% endif %}" href="{% url 'core:index' %}">
+            <a
+              class="nav-link {% if url_name == 'index' %}nav-link__active{% endif %}"
+              href="{% url 'core:index' %}"
+            >
               home
             </a>
           </li>
           <li>
-            <a class="nav-link {% if url_name == 'about' %}nav-link__active{% endif %}" href="{% url 'core:about' %}">
+            <a
+              class="nav-link {% if url_name == 'about' %}nav-link__active{% endif %}"
+              href="{% url 'core:about' %}"
+            >
               about
             </a>
           </li>
           <li>
-            <a class="nav-link {% if url_name == 'products' %}nav-link__active{% endif %}" href="#">
+            <a
+              class="nav-link {% if url_name == 'product_list' %}nav-link__active{% endif %}"
+              href="{% url 'core:product_list' %}"
+            >
               products
             </a>
           </li>
           <li>
-            <a class="nav-link {% if url_name == 'cart' %}nav-link__active{% endif %}" href="#">
+            <a
+              class="nav-link {% if url_name == 'cart' %}nav-link__active{% endif %}"
+              href="#"
+            >
               cart
             </a>
           </li>
@@ -51,35 +69,57 @@
         {% endwith %}
         <!-- navbar links -->
 
-        <button class="block md:hidden">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-            stroke="currentColor" class="size-7 dark:text-light">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25H12" />
+        <button class="block md:hidden" @click="showSidenav = !showSidenav">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="size-7 dark:text-light"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25H12"
+            />
           </svg>
         </button>
 
         <div class="flex items-center gap-3.5">
-          <button>
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-              stroke="currentColor" class="size-7 block">
-              <path stroke-linecap="round" stroke-linejoin="round"
-                d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z" />
-            </svg>
-          </button>
+          {% include 'components/theme-toggler.html' %}
 
           <a href="/cart" class="relative inline-block">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-              stroke="currentColor" class="size-6 dark:text-light">
-              <path stroke-linecap="round" stroke-linejoin="round"
-                d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="size-6 dark:text-light"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"
+              />
             </svg>
           </a>
 
           <a href="/profile">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-              stroke="currentColor" class="size-[26px] dark:text-light">
-              <path stroke-linecap="round" stroke-linejoin="round"
-                d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="size-[26px] dark:text-light"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"
+              />
             </svg>
           </a>
         </div>
@@ -88,24 +128,28 @@
   </nav>
   <!-- main navbar -->
 
-  <nav class="bg-light dark:bg-primary-dark mt-2 max-w-[240px] ml-8 p-2 rounded-md md:hidden transition">
-    <ul class="space-y-2.5">
-      <li>
-        <a class="nav-link" href="/"> home </a>
-      </li>
+  <template x-if="showSidenav">
+    <nav
+      class="bg-light dark:bg-primary-dark mt-2 max-w-[240px] ml-8 p-2 rounded-md md:hidden transition"
+    >
+      <ul class="space-y-2.5">
+        <li>
+          <a class="nav-link" href="/"> home </a>
+        </li>
 
-      <li>
-        <a class="nav-link" href="/about"> about </a>
-      </li>
+        <li>
+          <a class="nav-link" href="/about"> about </a>
+        </li>
 
-      <li>
-        <a class="nav-link" href="/products"> products </a>
-      </li>
+        <li>
+          <a class="nav-link" href="/products"> products </a>
+        </li>
 
-      <li>
-        <a class="nav-link" href="/cart"> cart </a>
-      </li>
-    </ul>
-  </nav>
+        <li>
+          <a class="nav-link" href="/cart"> cart </a>
+        </li>
+      </ul>
+    </nav>
+  </template>
   <!-- side navbar -->
 </header>
