--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -1,28 +1,36 @@
-{% extends 'layout/main.layout.html' %}
-{% load static %}
+{% extends 'layout/main.layout.html' %} 
+{% load static %} 
 
-{% block title %} ShopSwift | Explore Shop Thrive {% endblock title %}
+{% block title %} ShopSwift | Explore Shop Thrive {% endblock title %} 
 
 {% block main %}
 <section>
   <div class="wrapper">
     <div class="grid gap-8 md:grid-cols-2 items-center">
-      <div class="space-y-5 md:space-y-3 lg:space-y-5 w-full max-w-md md:max-w-lg">
-        <h1 class="text-3xl lg:text-[42px] text-gray font-extrabold lg:leading-[1.17] dark:text-light transition">
+      <div
+        class="space-y-5 md:space-y-3 lg:space-y-5 w-full max-w-md md:max-w-lg"
+      >
+        <h1
+          class="text-3xl lg:text-[42px] text-gray font-extrabold lg:leading-[1.17] dark:text-light transition"
+        >
           Explore. Shop. Thrive. Elevating your lifestyle online.
         </h1>
         <p class="font-normal text-base lg:text-lg dark:text-light pb-3">
-          SwiftShop, a clean and functional e-commerce website built with Django, highlighting essential web development
-          techniques.
+          SwiftShop, a clean and functional e-commerce website built with
+          Django, highlighting essential web development techniques.
         </p>
 
-        <a href="#">
+        <a href="{% url 'core:product_list' %}">
           <button class="btn-primary mt-3">View Products</button>
         </a>
       </div>
 
       <div class="flex justify-end">
-        <img class="rounded-lg shadow-2xl" src="{% static 'images/hero-image.jpg' %}" alt="hero-image" />
+        <img
+          class="rounded-lg shadow-2xl"
+          src="{% static 'images/hero-image.jpg' %}"
+          alt="hero-image"
+        />
       </div>
     </div>
   </div>
@@ -35,7 +43,9 @@
     </h3>
     <hr class="line-break" />
 
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 mb-6 mt-14"></div>
+    <div
+      class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 mb-6 mt-14"
+    ></div>
   </div>
 </section>
 
@@ -43,7 +53,9 @@
   <div class="wrapper">
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 md:gap-11 lg:gap-16">
       <div class="space-y-3">
-        <h3 class="text-3xl dark:text-light text-secondary-dark font-medium transition">
+        <h3
+          class="text-3xl dark:text-light text-secondary-dark font-medium transition"
+        >
           Join our newsletter for 20% off
         </h3>
         <p class="font-normal text-base text-gray dark:text-light">
@@ -53,10 +65,16 @@
       </div>
       <div class="flex lg:justify-end items-center">
         <div
-          class="bg-light dark:bg-gray-dark p-1.5 rounded-lg flex justify-between flex-wrap lg:flex-1 gap-3 sm:max-w-sm">
-          <input type="text" placeholder="Enter email..."
-            class="px-3 outline-none bg-transparent inline-block dark:text-light" />
-          <button class="text-lg text-light bg-primary px-3 py-2 rounded-md border-primary transition">
+          class="bg-light dark:bg-gray-dark p-1.5 rounded-lg flex justify-between flex-wrap lg:flex-1 gap-3 sm:max-w-sm"
+        >
+          <input
+            type="text"
+            placeholder="Enter email..."
+            class="px-3 outline-none bg-transparent inline-block dark:text-light"
+          />
+          <button
+            class="text-lg text-light bg-primary px-3 py-2 rounded-md border-primary transition"
+          >
             Subscribe
           </button>
         </div>
