--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -1,32 +1,39 @@
-{% extends 'layout/auth.layout.html' %}
-{% load static %}
+{% extends 'layout/auth.layout.html' %} 
+{% load static %} 
 
-{% block title %} Sign in | ShopSwift {% endblock title %}
+{% block title %} Sign in | ShopSwift {% endblock title %} 
 
 {% block main %}
 <section class="w-full h-full flex justify-center items-center px-3">
-    <form method="POST" action="."
-        class="max-w-lg w-full shadow-md rounded-xl px-4 sm:px-5 py-7 md:p-8 space-y-6 bg-light dark:bg-secondary-dark">
-        <h2 class="text-4xl text-secondary-dark font-medium transition text-center dark:text-light">
-            Login
-        </h2>
+  <form
+    method="POST"
+    action="."
+    class="max-w-lg w-full shadow-md rounded-xl px-4 sm:px-5 py-7 md:p-8 space-y-6 bg-light dark:bg-primary-dark"
+  >
+    <h2
+      class="text-4xl text-secondary-dark font-medium transition text-center dark:text-light"
+    >
+      Login
+    </h2>
 
-        <div class="auth-field-wrapper">
-            <label for="username">Username</label>
-            <input type="text" name="username" id="username" />
-        </div>
+    <div class="auth-field-wrapper">
+      <label for="username">Username</label>
+      <input type="text" name="username" id="username" />
+    </div>
 
-        <div class="auth-field-wrapper">
-            <label for="password">Password</label>
-            <input type="password" name="password" id="password" />
-        </div>
+    <div class="auth-field-wrapper">
+      <label for="password">Password</label>
+      <input type="password" name="password" id="password" />
+    </div>
 
-        <button type="submit" class="btn-primary w-full">Login</button>
+    <button type="submit" class="btn-primary w-full">Login</button>
 
-        <p class="text-center text-secondary-dark dark:text-light">
-            Not a member yet?
-            <a href="{% url 'core:register' %}" class="text-primary font-medium"> Register </a>
-        </p>
-    </form>
+    <p class="text-center text-secondary-dark dark:text-light">
+      Not a member yet?
+      <a href="{% url 'core:register' %}" class="text-primary font-medium">
+        Register
+      </a>
+    </p>
+  </form>
 </section>
 {% endblock main %}
