--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -6,7 +6,7 @@
 {% block main %}
 <section class="w-full h-full flex justify-center items-center px-3">
     <form method="POST"
-        class="max-w-lg w-full shadow-md rounded-xl px-4 sm:px-5 py-7 md:p-8 space-y-6 bg-light dark:bg-secondary-dark">
+        class="max-w-lg w-full shadow-md rounded-xl px-4 sm:px-5 py-7 md:p-8 space-y-6 bg-light dark:bg-primary-dark">
         <h2 class="text-4xl text-secondary-dark font-medium transition text-center dark:text-light">
             Register
         </h2>
