--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -20,7 +20,7 @@
           Django, highlighting essential web development techniques.
         </p>
 
-        <a href="{% url 'core:product_list' %}">
+        <a href="{% url 'products:list' %}">
           <button class="btn-primary mt-3">View Products</button>
         </a>
       </div>
