--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -30,7 +30,7 @@
 
     <p class="text-center text-secondary-dark dark:text-light">
       Not a member yet?
-      <a href="{% url 'core:register' %}" class="text-primary font-medium">
+      <a href="{% url 'user:register' %}" class="text-primary font-medium">
         Register
       </a>
     </p>
