--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -37,7 +37,7 @@
 
         <p class="text-center text-secondary-dark dark:text-light">
             Already a member?
-            <a href="{% url 'core:login' %}" class="text-primary font-medium"> Login </a>
+            <a href="{% url 'user:login' %}" class="text-primary font-medium"> Login </a>
         </p>
     </form>
 </section>
