--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -6,24 +6,34 @@
 {% block main %}
 <section class="w-full h-full flex justify-center items-center px-3">
   <form
-    method="POST"
     action="."
+    method="POST"
     class="max-w-lg w-full shadow-md rounded-xl px-4 sm:px-5 py-7 md:p-8 space-y-6 bg-light dark:bg-primary-dark"
   >
+    {% csrf_token %}
     <h2
       class="text-4xl text-secondary-dark font-medium transition text-center dark:text-light"
     >
       Login
     </h2>
 
-    <div class="auth-field-wrapper">
-      <label for="username">Username</label>
-      <input type="text" name="username" id="username" />
-    </div>
+    {% if form.errors %}
+    <ul class="bg-red-500 px-4 py-2 rounded-md shadow-md">
+      {% for field in form %} 
+        {% for error in field.errors %}
+          <li class="text-white">{{ error|escape }}</li>
+        {% endfor %} 
+      {% endfor %}
+    </ul>
+    {% endif %}
 
-    <div class="auth-field-wrapper">
-      <label for="password">Password</label>
-      <input type="password" name="password" id="password" />
+    <div class="space-y-4 md:space-y-6">
+      {% for field in form %}
+      <div class="auth-field-wrapper">
+        <span class="capitalize"> {{ field.label_tag }} </span>
+        {{ field }}
+      </div>
+      {% endfor %}
     </div>
 
     <button type="submit" class="btn-primary w-full">Login</button>
