--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -65,9 +65,9 @@
           <li>
             <a
               class="nav-link {% if url_name == 'list' %}nav-link__active{% endif %}"
-              href="{% url 'products:list' %}"
+              href="{% url 'product:list' %}"
             >
-              products
+              Products
             </a>
           </li>
           <li>
@@ -185,9 +185,9 @@
         <li>
           <a
             class="nav-link {% if url_name == 'list' %}nav-link__active{% endif %}"
-            href="{% url 'products:list' %}"
+            href="{% url 'product:list' %}"
           >
-            products
+            Products
           </a>
         </li>
         <li>
