--- a/templates/components/search-form.html
+++ b/templates/components/search-form.html
@@ -58,14 +58,11 @@
   <div class="flex gap-2.5">
     <button
       type="submit"
-      class="w-full text-base text-light bg-primary px-3 py-2 rounded-md border-primary transition shadow-md"
+      class="btn bg-emerald-500 border-emerald-500 p-1.5 w-full"
     >
       Submit
     </button>
-    <button
-      type="reset"
-      class="w-full text-base text-light bg-red-500 px-3 py-2 rounded-md border-primary transition shadow-md"
-    >
+    <button type="reset" class="btn bg-rose-500 border-rose-500 p-1.5 w-full">
       Reset
     </button>
   </div>
