--- a/templates/product/list.html
+++ b/templates/product/list.html
@@ -117,7 +117,8 @@
                   <p class="text-primary font-medium">${{ product.price }}</p>
                 </div>
                 <p class="text-gray dark:text-light">
-                  {{ product.description }}
+                  {{ product.description|slice:":120" }}
+                  {% if product.description|length > 120 %}...{% endif %}
                 </p>
               </div>
               <div class="flex space-x-2.5">
