--- a/templates/user/profile.html
+++ b/templates/user/profile.html
@@ -71,7 +71,10 @@
                 <h3 class="text-xl dark:text-light">{{ product.name }}</h3>
                 <p class="text-primary font-medium">${{ product.price }}</p>
               </div>
-              <p class="text-gray dark:text-light">{{ product.description }}</p>
+              <p class="text-gray dark:text-light">
+                {{ product.description|slice:":120" }}
+                {% if product.description|length > 120 %}...{% endif %}
+              </p>
             </div>
             <div class="flex space-x-2.5">
               <a
@@ -87,7 +90,7 @@
                   Edit
                 </button>
               </a>
-              <a href="#" class="inline-block">
+              <a href="{% url 'product:delete' product.id %}" class="inline-block">
                 <button class="btn bg-red-500 border-red-500 px-3 py-1.5">
                   Delete
                 </button>
