--- a/templates/core/cart.html
+++ b/templates/core/cart.html
@@ -1,7 +1,91 @@
 {% extends 'layout/main.layout.html' %} 
 {% load static %} 
 
-{% block title %} Products | ShopSwift {% endblock title %} 
+{% block title %} Cart | ShopSwift {% endblock title %} 
 
 {% block main %}
+<section>
+  <div class="wrapper">
+    <section>
+      <h3
+        class="text-2xl lg:text-3xl dark:text-light text-gray font-medium transition"
+      >
+        {% if request.user.is_authenticated and items %} 
+        Shopping Cart 
+        {% else %} 
+        Your cart is empty 
+        {% endif %}
+      </h3>
+    </section>
+    <hr class="line-break" />
+
+    {% if request.user.is_authenticated and items %}
+    <section class="md:grid grid-cols-6 md:gap-7 space-y-10 md:space-y-0 mt-6">
+      <aside class="md:col-span-2">
+        <div
+          class="px-3 py-5 lg:p-5 bg-light dark:bg-primary-dark transition rounded-xl space-y-3 mb-4"
+        >
+          <div class="border-b pb-1.5 flex justify-between">
+            <p class="text-gray dark:text-light">Subtotal</p>
+            <p class="text-gray-dark dark:text-light">
+              ${{ pricing.sub_total }}
+            </p>
+          </div>
+          <div class="border-b pb-1.5 flex justify-between">
+            <p class="text-gray dark:text-light">Shipping</p>
+            <p class="text-gray-dark dark:text-light">
+              ${{ pricing.shipping }}
+            </p>
+          </div>
+          <div class="border-b pb-1.5 flex justify-between">
+            <p class="text-gray dark:text-light">Tax</p>
+            <p class="text-gray-dark dark:text-light">${{ pricing.tax }}</p>
+          </div>
+
+          <div class="flex justify-between">
+            <p class="w-full text-gray text-lg font-medium dark:text-light">
+              Order Total
+            </p>
+            <p class="text-gray-dark dark:text-light">
+              ${{ pricing.order_total }}
+            </p>
+          </div>
+        </div>
+
+        <RouterLink to="/checkout">
+          <button class="btn-primary w-full">Proceed to Checkout</button>
+        </RouterLink>
+      </aside>
+
+      <div class="flex flex-wrap md:flex-col gap-6 md:col-span-4">
+        {% for item in items %}
+        <div
+          class="shadow-md rounded-lg p-3.5 space-y-5 lg:space-y-0 lg:space-x-7 text-center bg-light dark:bg-primary-dark flex-col lg:flex-row flex transition"
+        >
+          <img
+            src="{{ item.image.url }}"
+            class="rounded-md lg:w-2/5 shadow-sm"
+            alt="{{ item.name }} image"
+          />
+          <div class="flex-1 flex flex-col items-end justify-between space-y-5">
+            <div class="text-left w-full flex justify-between">
+              <h3 class="text-xl dark:text-light">{{ item.name }}</h3>
+              <p class="text-primary font-medium">${{ item.price }}</p>
+            </div>
+            <div class="flex space-x-2.5">
+              <a href="{% url 'product:detail' item.id %}" class="inline-block">
+                <button class="btn-secondary px-3 py-1.5">Detail</button>
+              </a>
+              <a href="{% url 'cart:remove' item.id %}" class="inline-block">
+                <button class="btn bg-rose-500 border-rose-500 px-3 py-1.5">Remove</button>
+              </a>
+            </div>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
+    </section>
+    {% endif %}
+  </div>
+</section>
 {% endblock main %}
