minor `box-shadow` & `border-radius` fixes

--- a/templates/components/search-form.html
+++ b/templates/components/search-form.html
@@ -1,5 +1,5 @@
 <form method="GET" id="search-form"
-  class="px-3 py-5 lg:px-5 lg:py-7 bg-light dark:bg-primary-dark transition rounded-xl space-y-3 sm:space-y-7">
+  class="px-3 py-5 lg:px-5 lg:py-7 bg-light dark:bg-primary-dark transition shadow-md rounded-xl space-y-3 sm:space-y-7">
   <div class="md:space-y-7 grid grid-cols-1 sm:grid-cols-3 gap-3 md:block justify-between items-center">
     <div>
       <label for="name" class="input-label"> Search Product </label>
