--- a/templates/core/cart.html
+++ b/templates/core/cart.html
@@ -60,7 +60,7 @@
       <div class="flex flex-wrap md:flex-col gap-6 md:col-span-4">
         {% for item in items %}
         <div
-          class="shadow-md rounded-lg p-3.5 space-y-5 lg:space-y-0 lg:space-x-7 text-center bg-light dark:bg-primary-dark flex-col lg:flex-row flex transition"
+          class="shadow-md rounded-xl p-3.5 space-y-5 lg:space-y-0 lg:space-x-7 text-center bg-light dark:bg-primary-dark flex-col lg:flex-row flex transition"
         >
           <img
             src="{{ item.image.url }}"
