--- a/templates/product/list.html
+++ b/templates/product/list.html
@@ -84,7 +84,7 @@
         <template x-if="gridLayout">
           <a href="{% url 'product:detail' product.id %}">
             <div
-              class="shadow-md rounded-lg px-5 py-3 space-y-3.5 text-center bg-light dark:bg-primary-dark transition h-full flex-between flex-col"
+              class="shadow-md rounded-xl px-5 py-3 space-y-3.5 text-center bg-light dark:bg-primary-dark transition h-full flex-between flex-col"
             >
               <img
                 src="{{ product.image.url }}"
@@ -101,7 +101,7 @@
 
         <template x-if="!gridLayout">
           <div
-            class="shadow-md rounded-lg p-3.5 space-y-5 lg:space-y-0 lg:space-x-7 text-center bg-light dark:bg-primary-dark flex-col lg:flex-row flex transition"
+            class="shadow-md rounded-xl p-3.5 space-y-5 lg:space-y-0 lg:space-x-7 text-center bg-light dark:bg-primary-dark flex-col lg:flex-row flex transition"
           >
             <img
               src="{{ product.image.url }}"
