--- a/templates/user/profile.html
+++ b/templates/user/profile.html
@@ -10,17 +10,22 @@
   >
     <aside class="col-span-1 space-y-5">
       <div
-        class="px-3 py-5 lg:px-5 lg:py-7 bg-light dark:bg-primary-dark transition rounded-xl"
+        class="px-3 py-5 lg:px-5 lg:py-7 bg-light dark:bg-primary-dark transition rounded-xl shadow-md"
       >
         <div class="space-y-1 mb-4">
-          <h3 class="text-2xl dark:text-light text-gray font-medium transition">
+          <h3
+            class="text-2xl dark:text-light text-primary-dark font-medium transition"
+          >
             {{ user.username }}
           </h3>
-          <p class="text-gray-dark text-base dark:text-white transition">
+          <p class="text-secondary-dark dark:text-white transition">
             {{ user.email }}
           </p>
-          <p class="text-gray text-base dark:text-white transition">
-            Member Since: {{ user.date_joined|date:"M d, Y" }}
+          <p class="text-gray-dark dark:text-white transition">
+            Member Since:
+            <span class="text-secondary-dark">
+              {{ user.date_joined|date:"M d, Y" }}
+            </span>
           </p>
         </div>
 
@@ -58,7 +63,7 @@
       <div class="space-y-6">
         {% for product in products %}
         <div
-          class="shadow-md rounded-lg p-3.5 space-y-5 lg:space-y-0 lg:space-x-7 text-center bg-light dark:bg-primary-dark flex-col lg:flex-row flex transition"
+          class="shadow-md rounded-xl p-3.5 space-y-5 lg:space-y-0 lg:space-x-7 text-center bg-light dark:bg-primary-dark flex-col lg:flex-row flex transition"
         >
           <img
             src="{{ product.image.url }}"
@@ -72,7 +77,7 @@
                 <p class="text-primary font-medium">${{ product.price }}</p>
               </div>
               <p class="text-gray dark:text-light">
-                {{ product.description|slice:":120" }}
+                {{ product.description|slice:":120" }} 
                 {% if product.description|length > 120 %}...{% endif %}
               </p>
             </div>
@@ -90,7 +95,10 @@
                   Edit
                 </button>
               </a>
-              <a href="{% url 'product:delete' product.id %}" class="inline-block">
+              <a
+                href="{% url 'product:delete' product.id %}"
+                class="inline-block"
+              >
                 <button class="btn bg-red-500 border-red-500 px-3 py-1.5">
                   Delete
                 </button>
