moved `templates` & `static` folder to `resources`

--- a/resources/templates/user/profile.html
+++ b/resources/templates/user/profile.html
@@ -31,7 +31,7 @@
 
         <a href="{% url 'user:logout' %}">
           <button
-            class="btn bg-transparent border-rose-500 text-primary-dark py-2 px-4"
+            class="btn bg-transparent border-rose-500 text-primary-dark py-1.5 px-5"
           >
             Logout
           </button>
@@ -99,7 +99,7 @@
                 href="{% url 'product:delete' product.id %}"
                 class="inline-block"
               >
-                <button class="btn bg-red-500 border-red-500 px-3 py-1.5">
+                <button class="btn bg-rose-500 border-rose-500 px-3 py-1.5">
                   Delete
                 </button>
               </a>
