--- a/resources/templates/core/cart.html
+++ b/resources/templates/core/cart.html
@@ -68,9 +68,15 @@
             alt="{{ item.name }} image"
           />
           <div class="flex-1 flex flex-col items-end justify-between space-y-5">
-            <div class="text-left w-full flex justify-between">
-              <h3 class="text-xl dark:text-light">{{ item.name }}</h3>
-              <p class="text-primary font-medium">${{ item.price }}</p>
+            <div class="space-y-2 text-left w-full">
+              <div class="flex justify-between">
+                <h3 class="text-xl dark:text-light">{{ item.name }}</h3>
+                <p class="text-primary font-medium">${{ item.price }}</p>
+              </div>
+              <p class="text-gray dark:text-light">
+                {{ item.description|slice:":120" }}
+                {% if item.description|length > 120 %}...{% endif %}
+              </p>
             </div>
             <div class="flex space-x-2.5">
               <a href="{% url 'product:detail' item.id %}" class="inline-block">
