--- a/resources/templates/product/list.html
+++ b/resources/templates/product/list.html
@@ -12,7 +12,7 @@
   </aside>
 
   <section class="col-span-3 lg:col-span-4">
-    <div x-data="{gridLayout: true}">
+    <div x-data="{gridLayout: false}">
       <div class="flex justify-between items-center">
         <p class="text-lg dark:text-light">
           {{ products|length }} Products Found
