--- a/resources/templates/product/create.html
+++ b/resources/templates/product/create.html
@@ -1,5 +1,8 @@
-{% extends 'layout/main.layout.html' %} {% load static %} {% block title %} New
-Product | ShopSwift {% endblock title %} {% block main %}
+{% extends 'layout/main.layout.html' %}
+{% load static %}
+{% block title %} New Product | ShopSwift {% endblock title %}
+
+{% block main %}
 <div class="wrapper">
   <section>
     <h3
@@ -12,7 +15,7 @@ Product | ShopSwift {% endblock title %} {% block main %}
   <hr class="h-px my-4 bg-gray-200 border-0 dark:bg-gray-700" />
 
   {% if form.errors %}
-  <ul class="btn-rose-500 px-4 py-2 rounded-md shadow-md">
+  <ul class="bg-rose-500 px-4 py-2 rounded-md shadow-md">
     {% for field in form %} {% for error in field.errors %}
     <li class="text-white">{{ error|escape }}</li>
     {% endfor %} {% endfor %}
